crates/ddlog-syntax/tests/parse/fail/unclosed_block.dl
// kind:expr validate:false pass:false ignore:false file:'ddlog-syntax/src/parser/expr.rs' line:378 column:3
{{ 10 }
